<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".WiFiEduroam"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/viewflipper"
	>
<ScrollView
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/FirstView"
	>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/logonLayout"
    android:orientation="vertical"
	android:gravity="center_horizontal|top">

	<ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
		android:layout_height="200dp"
		android:scaleType="fitCenter"
        android:contentDescription="@string/LOGO"
        android:src="@drawable/shalogo"
		android:padding="0dp" />

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:autoLink="web"
		android:layout_marginTop="15dp"
		android:text="@string/twitter"/>

	<CheckBox android:id="@+id/check5g"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:text="@string/c5ghz"/>
	<TextView
		android:id="@+id/label5g"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:textAlignment="center"
		android:text="@string/l5ghz"/>
	<TextView
		android:layout_marginTop="5dp"
		android:id="@+id/labelkeystore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:textAlignment="center"
		android:text="@string/lkeystore"/>

	<LinearLayout
		android:id="@+id/logindata"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center_horizontal|top"
		android:visibility="gone">

        <EditText
			android:id="@+id/username"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textEmailAddress"
			android:padding="5dp"
			android:layout_marginTop="15dp"
			android:hint="@string/Username"
			>
			<requestFocus />
		</EditText>

		<EditText
			android:id="@+id/password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPassword"
			android:padding="5dp"
			android:layout_marginTop="5dp"
			android:hint="@string/Password"
			/>
	</LinearLayout>

	<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Logon"
		android:layout_margin="15dp"/>

	<Space
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		/>
</LinearLayout>
</ScrollView>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/logonLayout"
			android:orientation="vertical"
			android:gravity="center"
			>
			<TextView
				android:id="@+id/resulttitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="15dp"
				android:textAlignment="center"
				android:textSize="24dp"
				/>
			<TextView
				android:id="@+id/result"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="15dp"
				android:textAlignment="center"
				/>
		</LinearLayout>
</ViewFlipper>
